tests/api/reference/negative/03-duplicate-field.asm
packed struct Pair {
    low: u8
    high: u8
}

const pair: Pair = Pair {
    low: 1,
    low: 2,
    high: 3
}
